# codemaximus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: update-badges.yml
output/go/: DispatcherProvider_1.go  EnhancedInitializerSheeshException_2.go  InternalBuilderStrategyMaldingDeserializer_3.go
output/java/: DistributedChungusNoobInitializerAuraValue_0.java
output/js/: ConnectorInitializerObserverComponentInterface_5.ts  MediatorMiddlewareUtil_4.ts
rust/: Cargo.toml
rust/src/: generic_emit.rs  go_emit.rs  hyperdrive.rs  java_emit.rs  javascript_emit.rs  lib.rs  namegen.rs  packwriter.rs  python_emit.rs
src/codemaximus/: __init__.py  __main__.py  _native.pyi  cli.py  comments.py  config.py  generator.py  hyperdrive.py  naming.py  native.py  stats.py  turbo.py
src/codemaximus/generators/: __init__.py  enterprise_java.py  enterprise_python.py  generic.py  go_slop.py  javascript.py
src/codemaxxing/: __init__.py  __main__.py  cli.py  config.py  generator.py  stats.py  turbo.py
src/codemaxxing/generators/: __init__.py  base.py  enterprise_java.py  enterprise_python.py  generic.py  go_slop.py  javascript.py
