[project]
name = "codemaximus"
version = "0.1.0"
description = "CLI that synthesizes large volumes of multi-language 'enterprise' style code; optional turbo loop (generate, git add, commit) for satire and local benchmarking."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.4,<2",
]

[project.scripts]
codemaximus = "codemaximus.cli:main"

[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "codemaximus._native"
