[package]
name = "codemaximus_native"
version = "0.1.0"
edition = "2021"
description = "PyO3 extension for codemaximus (scaffold)"

[lib]
name = "codemaximus_native"
crate-type = ["cdylib"]

[dependencies]
memchr = "2"
pyo3 = { version = "0.23", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
